--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
 
-
     <body>
 
     <!-- Navbar -->
@@ -85,6 +84,237 @@
 
     <!-- End Hero Section -->
 
+    <!-- Browse Our Menu Section -->
+
+    <section class="menu-section py-5">
+        <div class="container text-center">
+            <h2 class="section-title mb-3">Browse Our Menu</h2>
+            <br><br>
+
+            <div class="row g-4">
+                <div class="col-md-3 col-sm-6">
+                    <div class="menu-card p-4 h-100 d-flex flex-column justify-content-between">
+                        <div>
+                            <div class="icon-circle mb-3 mx-auto">
+                                <img src="MainMenu-Pics/tea%201.svg" alt="Breakfast" class="menu-icon">
+                            </div>
+                            <h5 class="h5-header">Breakfast</h5><br>
+                            <p class="p5-main">
+                                Kickstart your morning with fresh, flavorful options designed to fuel your day.
+                            </p>
+                        </div>
+                        <a href="#" class="btn explore-btn mt-3">Explore Menu</a>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+                    <div class="menu-card p-4 h-100 d-flex flex-column justify-content-between">
+                        <div>
+                            <div class="icon-circle mb-3 mx-auto">
+                                <img src="MainMenu-Pics/popcorn.svg" alt="Main Dishes" class="menu-icon">
+                            </div>
+                            <h5 class="h5-header">Main Dishes</h5><br>
+                            <p class="p5-main">
+                                Indulge in a selection of satisfying mains made with the freshest ingredients.
+                            </p>
+                        </div>
+                        <a href="#" class="btn explore-btn mt-3">Explore Menu</a>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+                    <div class="menu-card p-4 h-100 d-flex flex-column justify-content-between">
+                        <div>
+                            <div class="icon-circle mb-3 mx-auto">
+                                <img src="MainMenu-Pics/drinks.svg" alt="Drinks" class="menu-icon">
+                            </div>
+                            <h5 class="h5-header">Drinks</h5><br>
+                            <p class="p5-main">
+                                Refresh yourself with handcrafted beverages that perfectly complement your meal.
+                            </p>
+                        </div>
+                        <a href="#" class="btn explore-btn mt-3">Explore Menu</a>
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+                    <div class="menu-card p-4 h-100 d-flex flex-column justify-content-between">
+                        <div>
+                            <div class="icon-circle mb-3 mx-auto">
+                                <img src="MainMenu-Pics/cake.svg" alt="Desserts" class="menu-icon">
+                            </div>
+                            <h5 class="h5-header">Desserts</h5><br>
+                            <p class="p5-main">
+                                End on a sweet note with our irresistible range of cakes, pastries, and treats.
+                            </p>
+                        </div>
+                        <a href="#" class="btn explore-btn mt-3">Explore Menu</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <!-- End Browse Our Menu Section -->
+
+    <!-- About Section -->
+    <section class="about-section py-5">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 position-relative mb-4 mb-lg-0">
+                    <div class="about-images">
+                        <img src="MainMenu-Pics/food.svg" alt="Main Dish" class="img-fluid main-img">
+                        <img src="MainMenu-Pics/Group.svg" alt="Chef Serving" class="img-fluid small-img">
+                    </div>
+                </div>
+
+                <div class="col-lg-6">
+                    <h1 class="section-title mb-3">We provide healthy food for your family.</h1>
+                    <p class="section-subtitle mb-4">
+                        Our story began with a vision to create a welcoming space where people
+                        could enjoy delicious, wholesome food made with love and care.
+                    </p>
+                    <p class="section-subtitle mb-4">
+                        Whether it’s a family gathering, a casual lunch, or a celebration,
+                        we are committed to serving meals that nourish the body and soul.
+                    </p>
+                    <a href="#" class="about-btn">More About Us</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- End About Section -->
+
+    <!-- Testimonials Section-->
+    <section class="testimonials-section py-5">
+        <div class="container text-center">
+            <h2 class="section-title mb-4">What Our Customers Say</h2>
+            <br>
+
+            <div class="row g-4">
+                <div class="col-md-4 d-flex">
+                    <div class="testimonial-card p-4 h-100 d-flex flex-column">
+                        <h4>“The best restaurant”</h4>
+                        <p class="testimonial-text">
+                            Last night, we dined at place and were simply blown away. From the moment we stepped in, we were enveloped in an inviting atmosphere and greeted with warm smiles.
+                        </p>
+                        <hr>
+                        <div class="d-flex align-items-center mt-auto">
+                            <img src="Test-Section-Pics/Ellipse%2019.svg" class="testimonial-img me-3" alt="Customer 1">
+                            <div>
+                                <h6 class="mb-0">Sarah Johnson</h6>
+                                <small class="text-muted">Food Blogger</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 d-flex">
+                    <div class="testimonial-card p-4 h-100 d-flex flex-column">
+                        <h4>“Simply delicious”</h4>
+                        <p class="testimonial-text">
+                            Place exceeded my expectations on all fronts. The ambiance was cozy and relaxed, making it a perfect venue for our anniversary dinner. Each dish was prepared and beautifully presented.
+                        </p>
+                        <hr>
+                        <div class="d-flex align-items-center mt-auto">
+                            <img src="Test-Section-Pics/Image.svg" class="testimonial-img me-3" alt="Customer 2">
+                            <div>
+                                <h6 class="mb-0">Michael Smith</h6>
+                                <small class="text-muted">Chef</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 d-flex">
+                    <div class="testimonial-card p-4 h-100 d-flex flex-column">
+                        <h4>“One of a kind restaurant”</h4>
+                        <p class="testimonial-text">
+                            The culinary experience at place is first to none. The atmosphere is vibrant, the food - nothing short of extraordinary. The food was the highlight of our evening. Highly recommended.
+                        </p>
+                        <hr>
+                        <div class="d-flex align-items-center mt-auto">
+                            <img src="Test-Section-Pics/Image%203.svg" class="testimonial-img me-3" alt="Customer 3">
+                            <div>
+                                <h6 class="mb-0">Emily Davis</h6>
+                                <small class="text-muted">Traveler</small>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- End Testimonials Section-->
+
+    <!-- Footer Section -->
+    <!-- Footer Section -->
+    <!-- Footer Section -->
+    <footer class="footer-section text-white pt-5 pb-3">
+        <div class="container">
+            <div class="row justify-content-between">
+
+                  <div class="col-md-4 mb-4">
+                    <div class="d-flex align-items-center mb-3">
+                        <img src="pics/japanese-food.svg" alt="Bistro Bliss Logo" style="height: 40px; margin-right: 8px;">
+                        <span class="logo-text">Bistro Bliss</span>
+                    </div>
+                    <p>
+                        In the new era of technology we look in the future with certainty and pride to for our company and.
+                    </p>
+                    <div class="social-icons mt-3">
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mb-4">
+                    <h5 class="mb-3">Pages</h5>
+                    <ul class="list-unstyled footer-links">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Delivery</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-md-4 mb-4">
+                    <h5 class="mb-3">Utility Pages</h5>
+                    <ul class="list-unstyled footer-links">
+                        <li><a href="#">Start Here</a></li>
+                        <li><a href="#">Styleguide</a></li>
+                        <li><a href="#">Password Protected</a></li>
+                        <li><a href="#">404 Not Found</a></li>
+                        <li><a href="#">Licenses</a></li>
+                        <li><a href="#">Changelog</a></li>
+                        <li><a href="#">View More</a></li>
+                    </ul>
+                </div>
+
+            </div>
+
+            <hr class="mt-4 mb-3 border-light">
+
+            <div class="row">
+                <div class="col text-center">
+                    <small>&copy; 2025 Bistro Bliss. All rights reserved.</small>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- End Footer Section -->
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+
 </body>
 </html>
